--- a/src/components/Buttons.css
+++ b/src/components/Buttons.css
@@ -11,17 +11,22 @@ label {
 }
 
 .button {
-  background-color: #ffbf46;
-  border: 2px solid #8a4fff;
+  background-color: #0946EE;
+  border: 0px solid #3787FE;
   border-radius: 5px;
   padding: 5px;
   font-size: 1.2rem;
-  font-family: monospace;
+  font-family: 'MyFont';
   font-weight: bold;
-  width: 100px;
+  width: 120px;
 }
 
 .buttons button:hover {
-  cursor: pointer;
+  cursor: hand;
   opacity: 0.6;
+}
+
+@font-face {
+  font-family: 'MyFont';
+  src: url('Sterilict-L3aen.ttf') format('truetype');
 }
