--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'MyFont';
+  src: url('Sterilict-L3aen.ttf') format('truetype');
+}
+
 .chart-container {
   padding-left: 1%;
+  font-family: 'MyFont';
+  background-color: #CE9712;
 }
