--- a/src/App.css
+++ b/src/App.css
@@ -9,55 +9,215 @@ body {
 }
 
 header {
-  border-bottom: 20px solid #CE9712;
+  border-top: 25px solid #CE9712;
+  border-left: 55px solid #CE9712;
+  border-radius: 25px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  margin-left: 2%;
+  margin-right: 3%;
+  margin-top: 2%;
+  overflow: hidden;
 }
 
 h1 {
   text-align: center;
   color: #3787FE;
+  font-size: x-large;
 }
 
 img {
-  width: 100%;
-  height: 100%;
+  max-width: 99px;
+  max-height: 99px;
+  border: solid 1px aqua;
+  border-radius: 20px;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+  margin-right: 100px;
 }
 
 footer {
-  border-top: 20px solid #CE9712;
+  border-bottom: 25px solid #CE9712;
   padding: 1%;
   text-align: center;
   position: fixed;
   bottom: 10;
   left: 0;
   right: 0;
-  margin-top: 2%;
+  margin-top: 0%;
+  margin-bottom: 3%;
   position: relative;
   z-index: 1;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+.footer::before {
+  content: ""; /* Empty content, required for pseudo-elements */
+  background-color: rgb(0, 0, 0); /* Set your desired text background color */
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1; /* Place the pseudo-element behind the text */
 }
 
 footer p {
   color: #D45F10;
-  padding: 1%;
-  margin: 1%;
-}
-
-.balance-card {
-  background-color: #3787FE;
-  border: 0px solid #0946EE;
-  padding: 1%;
-  width: 25%;
-  margin-top: 3%;
-  margin-bottom: 1%;
-  border-radius: 5px;
-}
-
-.balance-card p {
-  font-size: 1.2rem;
+  padding: 0%;
+  margin: 0%;
+  font-size: x-large;
   font-weight: bold;
   font-family: 'MyFont';
 }
 
+.button-holder {
+  margin-top: 5px;
+  background-color: #000000;
+  border: 20px solid aqua;
+  border-radius: 25px;
+  border-top-left-radius: 0%;
+  border-bottom-right-radius: 0%;
+  border-left-width: 55px;
+  border-right-width: 0px;
+  border-top-width: 0px;
+  height: 70px;
+  width: 40%;
+  overflow: scroll;
+  margin-left: 2%;
+  margin-right: .5%;
+  flex: content;
+  justify-content: space-between;
+}
+
+.button-next {
+  margin-top: 5px;
+  background-color: #000000;
+  border: 20px solid #0946EE;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  border-top-width: 0px;
+  height: 70px;
+  width: 10%;
+  overflow: scroll;
+  margin-right: .5%;
+}
+
+.button-nextest {
+  margin-top: 5px;
+  background-color: #000000;
+  border: 20px solid #3787FE;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  border-top-width: 0px;
+  height: 70px;
+  width: 10%;
+  overflow: scroll;
+  margin-right: .5%;
+}
+
+.button-nextestly {
+  margin-top: 5px;
+  background-color: #000000;
+  border: 20px solid #D45F10;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  border-top-width: 0px;
+  height: 70px;
+  width: 3%;
+  overflow: scroll;
+  margin-right: .5%;
+}
+
+.button-nextiest {
+  margin-top: 5px;
+  background-color: #000000;
+  border: 20px solid #CE9712;
+  border-right-width: 0px;
+  border-left-width: 0px;
+  border-top-width: 0px;
+  height: 70px;
+  width: 40%;
+  overflow: flex;
+  column-count: 4;
+  margin-right: 3%;
+  cursor: hand;
+}
+
+.button-nextiest p {
+  color: #3787FE;
+  text-decoration: none;
+  cursor: hand;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 0;
+  margin-top: 0;
+}
+
+.button-nextiest p a {
+  color: aqua;
+  text-decoration: none;
+  cursor: hand;
+  padding: 1%;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  flex-basis: calc(33.33% - 10px);
+}
+
+.button-nextiest p a:hover {
+  color: aqua;
+  text-decoration: none;
+  cursor: hand;
+  opacity: 0.6;
+}
+
+.balance-card {
+  position: relative;
+  background-color: #3787FE;
+  padding: 0%;
+  width: 35%;
+  height: fit-content;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 20px;
+}
+
+.balance-card::before {
+  content: ""; /* Empty content, required for pseudo-elements */
+  background-color: #000000; /* Set your desired text background color */
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1; /* Place the pseudo-element behind the card */
+  border-radius: 5px;
+}
+
+.balance-card p {
+  font-size: 1.5rem;
+  font-weight: lighter;
+  font-family: 'MyFont';
+  background-color: black;
+  color: rgb(139, 139, 139);
+  height: 50%;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 1%;
+  padding-top: 4%;
+  padding-bottom: 4%;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
 .row {
+  margin-top: 1px;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -65,20 +225,34 @@ footer p {
 }
 
 .row-item {
-  background-color: #D45F10;
-  border: 0px solid #3787FE;
-  border-radius: 5px;
+  background-color: #000000;
+  border: 10px solid #CE9712;
+  border-radius: 20px;
+  border-left-width: 40px;
+  border-right-width: 40px;
   height: 300px;
   width: 40%;
   overflow: scroll;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 
 .row-item h3 {
-  padding-left: 2%;
+  background-color: #0946EE;
+  border-radius: 20px;
+  padding-left: 3%;
+  border: 3px solid #000000;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .row-item p {
-  padding-left: 2%;
+  padding-left: 3%;
+  background-color: #D45F10;
+  border-radius: 20px;
+  border: 3px solid #000000;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .transaction .transaction-amount {
@@ -87,6 +261,15 @@ footer p {
 
 .transaction-amount {
   border-bottom: 1px solid black;
+}
+
+.balance-content {
+  display: flex;
+  flex-direction: row; /* Arrange items vertically */
+  justify-content: center; /* Center items vertically */
+  align-items: center; /* Center items horizontally */
+  height: 50%;
+  padding-left: 5px;
 }
 
 @media (max-width: 876px) {
