--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -6,5 +6,7 @@
 .chart-container {
   padding-left: 1%;
   font-family: 'MyFont';
-  background-color: #CE9712;
+  background-color: #000000;
+  font-style: color #a43b81;
+  cursor: crosshair;
 }
