--- a/src/components/Transactions.css
+++ b/src/components/Transactions.css
@@ -5,11 +5,14 @@
 
 h3 {
   padding-left: 2%;
+  padding-top: .5%;
+  padding-bottom: .5%;
 }
 
 p {
   padding-left: 2%;
-  padding-top: 1%;
+  padding-top: .5%;
+  padding-bottom: .5%;
 }
 
 .transaction-date {
