--- a/src/components/Buttons.css
+++ b/src/components/Buttons.css
@@ -37,6 +37,8 @@ label {
   color: inherit;
   text-decoration: inherit;
   cursor: hand;
+  display: flex;
+  justify-content: space-around;
 }
 
 .buttons button:hover {
