--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,10 @@ footer {
   z-index: 1;
   margin-left: 2%;
   margin-right: 3%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .yessir {
