--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ header {
   margin-top: 2%;
   overflow: hidden;
   position: relative;
-  height: 50px;
+  height: 7vh;
   z-index: 1;
 }
 
@@ -27,12 +27,6 @@ h1 {
   text-align: center;
   color: #3787FE;
   font-size: x-large;
-  border-width: 15px;
-  border-color: black;
-  border-style: solid;
-  border-radius: 15px;
-  margin-top: -5px;
-  margin-left: -5px;
   z-index: 2;
   position: relative;
 }
@@ -89,7 +83,7 @@ footer {
 
 .prefooter {
   border-left: 95px solid #3787FE;
-  height: 10px;
+  height: 2vh;
   margin-left: 2%;
   margin-right: 3%;
   margin-top: 2px;
@@ -97,7 +91,7 @@ footer {
 
 .moreprefooter {
   border-left: 95px solid #D45F10;
-  height: 5px;
+  height: .5vh;
   margin-left: 2%;
   margin-right: 3%;
   margin-top: 2px;
@@ -105,7 +99,7 @@ footer {
 
 .mostprefooter {
   border-left: 95px solid #0946EE;
-  height: 20px;
+  height: 3vh;
   margin-left: 2%;
   margin-right: 3%;
   margin-top: .5%;
@@ -219,7 +213,7 @@ footer p {
 .button-nextiest p a {
   color: aqua;
   text-decoration: none;
-  cursor: hand;
+  cursor: default;
   padding: 1%;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -229,7 +223,7 @@ footer p {
 .button-nextiest p a:hover {
   color: aqua;
   text-decoration: none;
-  cursor: hand;
+  cursor: default;
   opacity: 0.6;
 }
 
@@ -260,8 +254,12 @@ footer p {
   border-radius: 5px;
 }
 
+.balance-card h2 {
+  font-size: 1rem;
+}
+
 .balance-card p {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: lighter;
   font-family: 'MyFont';
   background-color: black;
@@ -270,10 +268,11 @@ footer p {
   height: 100%;
   margin-top: 0px;
   margin-bottom: 0px;
-  padding-top: 4%;
-  padding-bottom: 4%;
+  padding-top: 3%;
+  padding-bottom: 3%;
   margin-left: 3%;
   margin-right: 3%;
+  padding-right: 3%;
 }
 
 .row {
@@ -287,7 +286,7 @@ footer p {
 .row-item {
   background-color: #000000;
   border: 10px solid #CE9712;
-  border-radius: 20px;
+  border-radius: 50px;
   border-left-width: 40px;
   border-right-width: 40px;
   height: 300px;
@@ -295,6 +294,7 @@ footer p {
   overflow: scroll;
   margin-left: 3%;
   margin-right: 3%;
+  margin-bottom: 1%;
 }
 
 .row-item h3 {
