--- a/src/App.css
+++ b/src/App.css
@@ -297,6 +297,20 @@ footer p {
   margin-bottom: 1%;
 }
 
+.row-itemz {
+  background-color: #000000;
+  border: 10px solid #CE9712;
+  border-radius: 50px;
+  border-left-width: 40px;
+  border-right-width: 40px;
+  height: 300px;
+  width: 40%;
+  margin-left: 3%;
+  margin-right: 3%;
+  margin-bottom: 1%;
+  overflow: hidden;
+}
+
 .row-item h3 {
   background-color: #0946EE;
   border-radius: 20px;
