--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -10,8 +10,8 @@
   cursor: crosshair;
   padding-left: 5%;
   padding-right: 5%;
-  box-shadow: rgba(118, 185, 126, 0.17) 8px -23px 20px 8px inset, rgba(136, 145, 101, 0.15) 10px 36px 60px 10px inset, rgba(84, 182, 130, 0.1) 10px -79px 120px 100px inset, rgba(27, 118, 104, 0.06) 0px 4px 1px, rgba(194, 31, 31, 0.09) 0px 4px 2px, rgba(127, 84, 84, 0.09) 0px 8px 4px, rgba(60, 110, 129, 0.09) 10px 132px 18px, rgba(104, 47, 32, 0.09) 10px 132px 116px;
   overflow: hidden;
+  box-shadow: rgba(0, 221, 255, 0.35) 0px -50px 536px -28px inset;
 }
 
 /* Change color of x-axis labels (Time) */
