--- a/src/App.css
+++ b/src/App.css
@@ -81,12 +81,58 @@ footer {
   color: #3787FE;
 }
 
+/* Style for individual content elements */
+.prefooter ul {
+  list-style: none; /* Remove default list styles */
+  padding: 0; /* Remove default padding */
+  margin: 0; /* Remove default margin */
+  display: flex; /* Display list items in a row */
+  overflow-x: hidden; /* Add horizontal scrolling for the list */
+  padding-top: 0vh;
+  animation: scrollZ 55s linear infinite;
+}
+
+@keyframes scrollZ {
+  0% {
+    transform: translateX(100%); /* Start offscreen to the right */
+  }
+  100% {
+    transform: translateX(-100%); /* Move to the left */
+  }
+}
+
+/* Style for individual list items */
+.prefooter ul li {
+  margin-right: 10px; /* Add some spacing between list items if needed */
+  flex-shrink: 0; /* Prevent list items from shrinking */
+  padding-top: 0;
+}
+
+.prefooter .content-container {
+  /* ... Other styles ... */
+  overflow: hidden; /* Hide overflowing content */
+  padding-top: 0;
+}
+
+.prefooter ul {
+  /* ... Other styles ... */
+  white-space: nowrap; /* Prevent content from wrapping to a new line */
+}
+
 .prefooter {
   border-left: 95px solid #3787FE;
   height: 2vh;
   margin-left: 2%;
   margin-right: 3%;
   margin-top: 2px;
+  padding-left: 2%;
+  color: aqua;
+  font-size: 1vh;
+  display: flex; /* Display content in a row layout */
+  align-items: center;
+  flex-direction: row;
+  white-space: nowrap; /* Prevent content from wrapping to a new line */
+  overflow: hidden;
 }
 
 .moreprefooter {
@@ -95,6 +141,14 @@ footer {
   margin-left: 2%;
   margin-right: 3%;
   margin-top: 2px;
+  padding-left: 2%;
+  padding-top: 0;
+  color: aqua;
+  font-size: .5vh;
+  display: flex; /* Display content in a row layout */
+  flex-direction: row;
+  white-space: nowrap; /* Prevent content from wrapping to a new line */
+  overflow: hidden;
 }
 
 .mostprefooter {
@@ -103,6 +157,88 @@ footer {
   margin-left: 2%;
   margin-right: 3%;
   margin-top: .5%;
+  padding-left: 2%;
+  color: aqua;
+  font-size: 1vh;
+  display: flex; /* Display content in a row layout */
+  flex-direction: row;
+  white-space: nowrap; /* Prevent content from wrapping to a new line */
+  overflow: hidden;
+}
+
+
+/* Style for individual content elements */
+.moreprefooter ul {
+  list-style: none; /* Remove default list styles */
+  padding: 0; /* Remove default padding */
+  margin: 0; /* Remove default margin */
+  display: flex; /* Display list items in a row */
+  overflow-x: hidden; /* Add horizontal scrolling for the list */
+  padding-top: 0vh;
+  animation: scrollRight 35s linear infinite;
+}
+
+@keyframes scrollRight {
+  0% {
+    transform: translateX(100%); /* Start offscreen to the right */
+  }
+  100% {
+    transform: translateX(-100%); /* Move to the left */
+  }
+}
+
+/* Style for individual list items */
+.moreprefooter ul li {
+  margin-right: 10px; /* Add some spacing between list items if needed */
+  flex-shrink: 0; /* Prevent list items from shrinking */
+  padding-top: 0;
+}
+
+.moreprefooter .content-container {
+  /* ... Other styles ... */
+  overflow: hidden; /* Hide overflowing content */
+  padding-top: 0;
+}
+
+.moreprefooter ul {
+  /* ... Other styles ... */
+  white-space: nowrap; /* Prevent content from wrapping to a new line */
+}
+
+/* Style for individual content elements */
+.mostprefooter ul {
+  list-style: none; /* Remove default list styles */
+  padding: 0; /* Remove default padding */
+  margin: 0; /* Remove default margin */
+  display: flex; /* Display list items in a row */
+  overflow-x: hidden; /* Add horizontal scrolling for the list */
+  padding-top: 1vh;
+  animation: scrollLeft 40s linear infinite;
+}
+
+@keyframes scrollLeft {
+  0% {
+    transform: translateX(100%); /* Start offscreen to the right */
+  }
+  100% {
+    transform: translateX(-100%); /* Move to the left */
+  }
+}
+
+/* Style for individual list items */
+.mostprefooter ul li {
+  margin-right: 10px; /* Add some spacing between list items if needed */
+  flex-shrink: 0; /* Prevent list items from shrinking */
+}
+
+.mostprefooter .content-container {
+  /* ... Other styles ... */
+  overflow: hidden; /* Hide overflowing content */
+}
+
+.mostprefooter ul {
+  /* ... Other styles ... */
+  white-space: nowrap; /* Prevent content from wrapping to a new line */
 }
 
 .footer::before {
@@ -286,12 +422,12 @@ footer p {
 .row-item {
   background-color: #000000;
   border: 10px solid #CE9712;
-  border-radius: 50px;
+  border-radius: 25px;
   border-left-width: 40px;
   border-right-width: 40px;
   height: 300px;
   width: 40%;
-  overflow: scroll;
+  overflow: hidden;
   margin-left: 3%;
   margin-right: 3%;
   margin-bottom: 1%;
@@ -300,7 +436,7 @@ footer p {
 .row-itemz {
   background-color: #000000;
   border: 10px solid #CE9712;
-  border-radius: 50px;
+  border-radius: 25px;
   border-left-width: 40px;
   border-right-width: 40px;
   height: 300px;
