--- a/src/components/FunFacts.css
+++ b/src/components/FunFacts.css
@@ -4,7 +4,12 @@
     color: black;
     background-color: #3787FE;
     border-width: 10vh;
-    border-radius: 100vh;
+    border-radius: 150vh;
     border-color: #3787FE;
+    width: 150px;
   }
   
+  .total-btc:hover {
+    cursor: default;
+    background-color: #0946EE
+  }
