--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,6 @@ footer {
   padding: 1%;
   text-align: center;
   position: fixed;
-  bottom: 10;
   left: 0;
   right: 0;
   margin-top: 2px;
@@ -52,8 +51,21 @@ footer {
   margin-right: 3%;
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+footer p {
+  color: #D45F10;
+  padding: 0%;
+  margin: 0%;
+  font-size: x-large;
+  font-weight: bold;
+  font-family: 'MyFont';
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-left: 5px;
 }
 
 .yessir {
@@ -123,13 +135,13 @@ footer {
   border-left: 95px solid #3787FE;
   height: 2vh;
   margin-left: 2%;
-  margin-right: 3%;
+  margin-right: 6%;
   margin-top: 2px;
   padding-left: 2%;
   color: aqua;
   font-size: 1vh;
   display: flex; /* Display content in a row layout */
-  align-items: center;
+  justify-content: end;
   flex-direction: row;
   white-space: nowrap; /* Prevent content from wrapping to a new line */
   overflow: hidden;
@@ -139,13 +151,14 @@ footer {
   border-left: 95px solid #D45F10;
   height: .5vh;
   margin-left: 2%;
-  margin-right: 3%;
+  margin-right: 6%;
   margin-top: 2px;
   padding-left: 2%;
   padding-top: 0;
   color: aqua;
   font-size: .5vh;
   display: flex; /* Display content in a row layout */
+  justify-content: end;
   flex-direction: row;
   white-space: nowrap; /* Prevent content from wrapping to a new line */
   overflow: hidden;
@@ -155,12 +168,13 @@ footer {
   border-left: 95px solid #0946EE;
   height: 3vh;
   margin-left: 2%;
-  margin-right: 3%;
+  margin-right: 6%;
   margin-top: .5%;
   padding-left: 2%;
   color: aqua;
   font-size: 1vh;
   display: flex; /* Display content in a row layout */
+  justify-content: end;
   flex-direction: row;
   white-space: nowrap; /* Prevent content from wrapping to a new line */
   overflow: hidden;
@@ -241,26 +255,6 @@ footer {
   white-space: nowrap; /* Prevent content from wrapping to a new line */
 }
 
-.footer::before {
-  content: ""; /* Empty content, required for pseudo-elements */
-  background-color: rgb(0, 0, 0); /* Set your desired text background color */
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1; /* Place the pseudo-element behind the text */
-}
-
-footer p {
-  color: #D45F10;
-  padding: 0%;
-  margin: 0%;
-  font-size: x-large;
-  font-weight: bold;
-  font-family: 'MyFont';
-}
-
 .button-holder {
   margin-top: 5px;
   background-color: #000000;
@@ -332,6 +326,7 @@ footer p {
   column-count: 4;
   margin-right: 3%;
   cursor: hand;
+  overflow: hidden;
 }
 
 .button-nextiest p {
@@ -353,6 +348,8 @@ footer p {
   padding: 1%;
   flex-direction: column;
   flex-wrap: nowrap;
+  overflow: hidden;
+  max-width: 100%;
   flex-basis: calc(33.33% - 10px);
 }
 
@@ -366,9 +363,8 @@ footer p {
 .balance-card {
   position: relative;
   background-color: #3787FE;
-  padding: 0%;
   width: 35%;
-  height: fit-content;
+  height: 3em;
   margin-top: 1%;
   margin-bottom: 1%;
   margin-left: 5%;
@@ -391,11 +387,11 @@ footer p {
 }
 
 .balance-card h2 {
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 .balance-card p {
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: lighter;
   font-family: 'MyFont';
   background-color: black;
@@ -404,11 +400,22 @@ footer p {
   height: 100%;
   margin-top: 0px;
   margin-bottom: 0px;
-  padding-top: 3%;
-  padding-bottom: 3%;
   margin-left: 3%;
   margin-right: 3%;
   padding-right: 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.balance-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 3em;
+  padding-left: 1em;
 }
 
 .row {
@@ -471,15 +478,6 @@ footer p {
 
 .transaction-amount {
   border-bottom: 1px solid black;
-}
-
-.balance-content {
-  display: flex;
-  flex-direction: row; /* Arrange items vertically */
-  justify-content: center; /* Center items vertically */
-  align-items: center; /* Center items horizontally */
-  height: 50%;
-  padding-left: 5px;
 }
 
 @media (max-width: 876px) {
