--- a/src/components/PaymentsModal.css
+++ b/src/components/PaymentsModal.css
@@ -23,6 +23,10 @@ form .button {
   color: black;
 }
 
+form .button:hover{
+opacity: .6;
+}
+
 section h3 {
   text-align: center;
   font-family: 'MyFont';
