--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ footer p {
   display: flex; /* Display list items in a row */
   overflow-x: hidden; /* Add horizontal scrolling for the list */
   padding-top: 0vh;
-  animation: scrollZ 55s linear infinite;
+  animation: scrollZ 10s linear infinite;
 }
 
 @keyframes scrollZ {
@@ -116,7 +116,7 @@ footer p {
 
 /* Style for individual list items */
 .prefooter ul li {
-  margin-right: 15px; /* Add some spacing between list items if needed */
+  margin-right: 10px; /* Add some spacing between list items if needed */
   flex-shrink: 0; /* Prevent list items from shrinking */
   padding-top: 0;
 }
@@ -125,6 +125,8 @@ footer p {
   /* ... Other styles ... */
   overflow: hidden; /* Hide overflowing content */
   padding-top: 0;
+  width: fit-content;
+  text-align: center;
 }
 
 .prefooter ul {
@@ -136,9 +138,9 @@ footer p {
   border-left: 95px solid #3787FE;
   height: 2vh;
   margin-left: 2%;
-  margin-right: 6%;
+  margin-right: 8%;
   margin-top: 2px;
-  padding-left: 2%;
+  padding-left: 60%;
   color: aqua;
   font-size: 1vh;
   display: flex; /* Display content in a row layout */
@@ -146,15 +148,17 @@ footer p {
   flex-direction: row;
   white-space: nowrap; /* Prevent content from wrapping to a new line */
   overflow: hidden;
+  text-align: center;
+  align-items: center;
 }
 
 .moreprefooter {
   border-left: 95px solid #D45F10;
   height: .5vh;
   margin-left: 2%;
-  margin-right: 6%;
+  margin-right: 8%;
   margin-top: 2px;
-  padding-left: 2%;
+  padding-left: 60%;
   padding-top: 0;
   color: aqua;
   font-size: .5vh;
@@ -169,9 +173,9 @@ footer p {
   border-left: 95px solid #0946EE;
   height: 3vh;
   margin-left: 2%;
-  margin-right: 6%;
+  margin-right: 8%;
   margin-top: .5%;
-  padding-left: 2%;
+  padding-left: 60%;
   color: aqua;
   font-size: 1vh;
   display: flex; /* Display content in a row layout */
@@ -190,7 +194,7 @@ footer p {
   display: flex; /* Display list items in a row */
   overflow-x: hidden; /* Add horizontal scrolling for the list */
   padding-top: 0vh;
-  animation: scrollRight 35s linear infinite;
+  animation: scrollRight 8s linear infinite;
 }
 
 @keyframes scrollRight {
@@ -204,7 +208,7 @@ footer p {
 
 /* Style for individual list items */
 .moreprefooter ul li {
-  margin-right: 15px; /* Add some spacing between list items if needed */
+  margin-right: 10px; /* Add some spacing between list items if needed */
   flex-shrink: 0; /* Prevent list items from shrinking */
   padding-top: 0;
 }
@@ -213,6 +217,7 @@ footer p {
   /* ... Other styles ... */
   overflow: hidden; /* Hide overflowing content */
   padding-top: 0;
+  width: fit-content;
 }
 
 .moreprefooter ul {
@@ -228,7 +233,7 @@ footer p {
   display: flex; /* Display list items in a row */
   overflow-x: hidden; /* Add horizontal scrolling for the list */
   padding-top: 1vh;
-  animation: scrollLeft 40s linear infinite;
+  animation: scrollLeft 15s linear infinite;
 }
 
 @keyframes scrollLeft {
@@ -242,13 +247,14 @@ footer p {
 
 /* Style for individual list items */
 .mostprefooter ul li {
-  margin-right: 15px; /* Add some spacing between list items if needed */
+  margin-right: 10px; /* Add some spacing between list items if needed */
   flex-shrink: 0; /* Prevent list items from shrinking */
 }
 
 .mostprefooter .content-container {
   /* ... Other styles ... */
   overflow: hidden; /* Hide overflowing content */
+  width: fit-content;
 }
 
 .mostprefooter ul {
