--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -6,12 +6,12 @@
 
 .chart-container {
   font-family: 'MyFont';
-  background-color: #000000;
+  background: linear-gradient(135deg, #000000, #001f3f); /* Gradient background */
   cursor: crosshair;
   padding-left: 4%;
   padding-right: 4%;
   overflow: hidden;
-  box-shadow: rgba(0, 221, 255, 0.35) 0px -50px 536px -28px inset;
+  box-shadow: rgba(106, 208, 193, 0.35) 0px -50px 536px -28px inset;
 }
 
 /* Change color of x-axis labels (Time) */
