--- a/src/App.css
+++ b/src/App.css
@@ -461,6 +461,9 @@ footer p {
   margin-right: 3%;
   margin-bottom: 1%;
   overflow: hidden;
+  display: grid;
+  align-items: start;
+  padding: 0px;
 }
 
 .row-item h3 {
