--- a/src/App.css
+++ b/src/App.css
@@ -9,72 +9,101 @@ body {
 }
 
 header {
-  border-top: 25px solid #CE9712;
-  border-left: 55px solid #CE9712;
+  border-top: 3vh solid transparent;
+  border-left: 55px solid transparent;
   border-top-left-radius: 25px;
   border-top-right-radius: 0px;
   border-bottom-left-radius: 0px;
-  margin-left: 2%;
-  margin-right: 3%;
-  margin-top: 2%;
+  margin: 2% 2% 0% 2%;
   overflow: hidden;
   position: relative;
-  height: 7vh;
-  z-index: 1;
+  height: fit-content;
+  background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 1) 50%, rgba(206, 151, 18, 0.7) 100%);
 }
 
 h1 {
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #3787FE;
   font-size: x-large;
-  z-index: 2;
   position: relative;
+  background: #000000;
+  border: black;
+  height: 100%;
+  border-top: 25px solid transparent;
+  border-left: 55px solid transparent;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  margin: 0% 0% 0% 0%;
+  padding-bottom: 2vh;
 }
 
 
 footer {
-  border-bottom: 25px solid #CE9712;
-  border-left: 95px solid #CE9712;
+  border-bottom: 25px solid transparent;
+  border-left: 95px solid transparent;
   border-radius: 25px;
   border-top-left-radius: 0px;
   border-bottom-right-radius: 0px;
-  padding: 1%;
+  padding: 0;
   text-align: center;
-  position: fixed;
   left: 0;
   right: 0;
-  margin-top: 2px;
-  margin-bottom: 1%;
+  margin: 2px 2% 1% 2%;
   position: relative;
-  z-index: 1;
-  margin-left: 2%;
-  margin-right: 3%;
+  background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 1) 50%, rgba(206, 151, 18, 0.7) 100%);
+  flex-wrap: nowrap;
+  overflow: hidden;
+}
+
+h5 {
+  position: relative;
+  background: #000000;
+  border-bottom: 0;
+  border-left: 55px solid transparent;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 0px;
+  border-top-left-radius: 0px;
+  margin: 0% 0% 0% 0%;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: space-evenly;
+  overflow: hidden;
+  flex: content;
+  padding-top: 1% 1% 1% 0%;
+  text-align: center;
+  height: 100%;
+  width: 100%;
 }
 
 footer p {
   color: #D45F10;
-  padding: 0%;
   margin: 0%;
-  font-size: large;
+  font-size: medium;
   font-weight: bold;
   font-family: 'MyFont';
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  margin-left: 5px;
-  text-align: center;
+  flex-basis: calc(25% - 1px);
+}
+
+.right {
+  width:fit-content;
+  white-space: nowrap;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  padding-right: 8vw;
+  overflow: flex;
 }
 
 .yessir {
   display: flex;
   flex-direction: row;
   align-items: center;
-  border-top: 25px solid #CE9712;
-  border-left: 95px solid #CE9712;
+  border-top: 25px solid transparent;
+  border-left: 95px solid transparent;
   border-radius: 25px;
   border-bottom-left-radius: 0px;
   border-top-right-radius: 0px;
@@ -88,10 +117,10 @@ footer p {
   margin-top: 2px;
   margin-bottom: 3%;
   position: relative;
-  z-index: 1;
   margin-left: 2%;
-  margin-right: 3%;
-  color: #3787FE;
+  margin-right: 2%;
+  color: black;
+  background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 1) 50%, rgba(206, 151, 18, 0.7) 100%);
 }
 
 /* Style for individual content elements */
@@ -135,14 +164,21 @@ footer p {
 }
 
 .prefooter {
-  border-left: 95px solid #3787FE;
+  border-left: 95px solid transparent;
   height: 2vh;
   margin-left: 2%;
   margin-right: 8%;
   margin-top: 2px;
-  padding-left: 60%;
   color: aqua;
   font-size: 1vh;
+  background: linear-gradient(to right, rgba(55, 135, 254, 0.7) 0%, rgba(55, 135, 254, 1) 50%, rgba(55, 135, 254, 0.7) 100%);;
+}
+
+.inside-footer {
+  padding-left: 72%;
+  height: 100%;
+  width: 100;
+  background-color: black;
   display: flex; /* Display content in a row layout */
   justify-content: end;
   flex-direction: row;
@@ -153,36 +189,27 @@ footer p {
 }
 
 .moreprefooter {
-  border-left: 95px solid #D45F10;
+  border-left: 95px solid transparent;
   height: .5vh;
   margin-left: 2%;
   margin-right: 8%;
   margin-top: 2px;
-  padding-left: 60%;
-  padding-top: 0;
   color: aqua;
   font-size: .5vh;
-  display: flex; /* Display content in a row layout */
-  justify-content: end;
-  flex-direction: row;
-  white-space: nowrap; /* Prevent content from wrapping to a new line */
-  overflow: hidden;
+  background: linear-gradient(to right, rgba(212, 95, 16, 0.7) 0%, rgba(212, 95, 16, 1) 50%, rgba(212, 95, 16, 0.7) 100%);
 }
 
 .mostprefooter {
-  border-left: 95px solid #0946EE;
+  border-left: 95px solid transparent;
   height: 3vh;
   margin-left: 2%;
   margin-right: 8%;
   margin-top: .5%;
-  padding-left: 60%;
   color: aqua;
   font-size: 1vh;
-  display: flex; /* Display content in a row layout */
-  justify-content: end;
-  flex-direction: row;
-  white-space: nowrap; /* Prevent content from wrapping to a new line */
-  overflow: hidden;
+  background: linear-gradient(to right, rgba(9, 70, 238, 0.7) 0%, rgba(9, 70, 238, 1) 50%, rgba(9, 70, 238, 0.7) 100%);
+
+
 }
 
 
@@ -263,9 +290,28 @@ footer p {
 }
 
 .button-holder {
-  margin-top: 5px;
   background-color: #000000;
-  border: 20px solid aqua;
+  border-radius: 25px;
+  border-top-left-radius: 0%;
+  border-bottom-right-radius: 0%;
+  border-left-width: 55px;
+  border-right-width: 0px;
+  padding-top: 0px;
+  margin-top: 0px;
+  height: 100%;
+  width: 100%;
+  overflow: flex;
+  flex: content;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-holder-holder {
+  margin-top: 5px;
+  background: linear-gradient(to right, rgba(0, 255, 255, 0.7) 0%, rgba(0, 255, 255, 1) 50%, rgba(0, 255, 255, 0.7) 100%);
+  border: 20px solid transparent;
   border-radius: 25px;
   border-top-left-radius: 0%;
   border-bottom-right-radius: 0%;
@@ -277,16 +323,17 @@ footer p {
   overflow: flex;
   margin-left: 2%;
   margin-right: 2px;
-  padding-left: 2px;
-  padding-right: 5px;
   flex: content;
   justify-content: space-between;
+  align-items: start;
+  position: relative;
+  flex-basis: calc(33.33% - 1px);
 }
 
 .button-next {
   margin-top: 5px;
-  background-color: #000000;
-  border: 20px solid #0946EE;
+  background: linear-gradient(to right, rgba(9, 70, 238, 0.7) 0%, rgba(9, 70, 238, 1) 50%, rgba(9, 70, 238, 0.7) 100%);
+  border: 20px solid transparent;
   border-left-width: 0px;
   border-right-width: 0px;
   border-top-width: 0px;
@@ -296,10 +343,16 @@ footer p {
   margin-right: 2px;
 }
 
+.insidebutton-next {
+  height: 100%;
+  width: 100%;
+  background-color: black;
+}
+
 .button-nextest {
   margin-top: 5px;
-  background-color: #000000;
-  border: 20px solid #3787FE;
+  background: linear-gradient(to right, rgba(55, 135, 254, 0.7) 0%, rgba(55, 135, 254, 1) 50%, rgba(55, 135, 254, 0.7) 100%);
+  border: 20px solid transparent;
   border-left-width: 0px;
   border-right-width: 0px;
   border-top-width: 0px;
@@ -309,10 +362,16 @@ footer p {
   margin-right: 2px;
 }
 
+.insidebutton-nextest {
+  height: 100%;
+  width: 100%;
+  background-color: black;
+}
+
 .button-nextestly {
   margin-top: 5px;
-  background-color: #000000;
-  border: 20px solid #D45F10;
+  border: 20px solid transparent;
+  background: linear-gradient(to right, rgba(212, 95, 16, 0.7) 0%, rgba(212, 95, 16, 1) 50%, rgba(212, 95, 16, 0.7) 100%);
   border-left-width: 0px;
   border-right-width: 0px;
   border-top-width: 0px;
@@ -322,10 +381,16 @@ footer p {
   margin-right: 2px;
 }
 
+.insidebutton-nextestly {
+  height: 100%;
+  width: 100%;
+  background-color: black;
+}
+
 .button-nextiest {
   margin-top: 5px;
-  background-color: #000000;
-  border: 20px solid #CE9712;
+  background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 1) 50%, rgba(206, 151, 18, 0.7) 100%);
+  border: 20px solid transparent;
   border-right-width: 0px;
   border-left-width: 0px;
   border-top-width: 0px;
@@ -333,13 +398,21 @@ footer p {
   width: 40%;
   overflow: flex;
   column-count: 4;
-  margin-right: 3%;
+  margin-right: 2%;
   cursor: hand;
   overflow: hidden;
+  position: relative;
+}
+
+.insidebutton-nextiest {
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  position: relative;
 }
 
 .button-nextiest p {
-  color: #3787FE;
+  background-color: black;
   text-decoration: none;
   cursor: hand;
   display: flex;
@@ -348,18 +421,22 @@ footer p {
   justify-content: space-between;
   margin-left: 0;
   margin-top: 0;
+  position: relative;
+  width: 110%;
 }
 
 .button-nextiest p a {
+  background-color: black;
   color: aqua;
   text-decoration: none;
   cursor: default;
-  padding: 1%;
   flex-direction: column;
   flex-wrap: nowrap;
   overflow: hidden;
   max-width: 100%;
+  padding: 1.59%;
   flex-basis: calc(33.33% - 10px);
+  position: relative;
 }
 
 .button-nextiest p a:hover {
@@ -371,7 +448,7 @@ footer p {
 
 .balance-card {
   position: relative;
-  background-color: #3787FE;
+  background: linear-gradient(to right, rgba(55, 135, 254, 0.7) 0%, rgba(55, 135, 254, 1) 50%, rgba(55, 135, 254, 0.7) 100%);
   width: 35%;
   height: 3em;
   margin-top: 1%;
@@ -437,37 +514,47 @@ footer p {
 
 .row-item {
   background-color: #000000;
-  border: 10px solid #CE9712;
+  border: 10px solid black transparent;
   border-radius: 25px;
   border-left-width: 40px;
   border-right-width: 40px;
-  height: 300px;
+  min-height: 25%;
   width: 40%;
   overflow: hidden;
   margin-left: 3%;
   margin-right: 3%;
   margin-bottom: 1%;
+  background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 1) 50%, rgba(206, 151, 18, 0.7) 100%);
+}
+
+.row-itemer {
+background: black;
+margin: 2% 7% 2% 7%;
+height: 300px;
+border-radius: 25px;
+padding: .2%;
 }
 
 .row-itemz {
   background-color: #000000;
-  border: 10px solid #CE9712;
+  border: 10px solid transparent;
   border-radius: 25px;
   border-left-width: 40px;
   border-right-width: 40px;
-  height: 300px;
+  height: 25%;
   width: 40%;
   margin-left: 3%;
   margin-right: 3%;
   margin-bottom: 1%;
   overflow: hidden;
-  display: grid;
-  align-items: start;
-  padding: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 2) 50%, rgba(206, 151, 18, 0.7) 100%);
 }
 
 .row-item h3 {
-  background-color: #0946EE;
+  background: linear-gradient(to right, rgba(9, 70, 238, 0.7) 0%, rgba(9, 70, 238, 1) 50%, rgba(9, 70, 238, 0.7) 100%);
   border-radius: 20px;
   padding-left: 3%;
   border: 3px solid #000000;
@@ -477,7 +564,7 @@ footer p {
 
 .row-item p {
   padding-left: 3%;
-  background-color: #D45F10;
+  background: linear-gradient(to right, rgba(212, 95, 16, 0.7) 0%, rgba(212, 95, 16, 1) 50%, rgba(212, 95, 16, 0.7) 100%);
   border-radius: 20px;
   border: 3px solid #000000;
   margin-left: 10px;
