--- a/src/components/FunFacts.css
+++ b/src/components/FunFacts.css
@@ -2,15 +2,16 @@
     font-size: .9vh;
     padding: 1vh;
     color: black;
-    background-color: aqua;
+    background: linear-gradient(to right, rgba(0, 255, 255, 0.7) 0%, rgba(0, 255, 255, 1) 50%, rgba(0, 255, 255, 0.7) 100%);
     border-radius: 150vh;
     border-color: aqua;
     width: 10vw;
     opacity: .8;
+    margin: 0;
   }
   
   .total-btc:hover {
     cursor: default;
-    background-color: aqua;
+    background: linear-gradient(to right, rgba(0, 255, 255, 0.7) 0%, rgba(0, 255, 255, 1) 50%, rgba(0, 255, 255, 0.7) 100%);
     opacity: 2;
   }
