--- a/src/components/Transactions.css
+++ b/src/components/Transactions.css
@@ -7,12 +7,14 @@ h3 {
   padding-left: 2%;
   padding-top: .5%;
   padding-bottom: .5%;
+  background: solid black;
 }
 
 p {
   padding-left: 2%;
   padding-top: .5%;
   padding-bottom: .5%;
+  background: solid black;
 }
 
 .transaction-date {
