--- a/src/components/VideoPlayer.css
+++ b/src/components/VideoPlayer.css
@@ -1,7 +1,7 @@
 .video-container {
     justify-content: center;
-    width: 50px; /* Set the width to 100 pixels */
-    height: 50px; /* Set the height to 100 pixels */
+    width: 50px;
+    height: 50px;
     overflow: hidden;
     position: relative;
   }
