--- a/src/App.css
+++ b/src/App.css
@@ -101,44 +101,40 @@ footer p {
   overflow: flex;
 }
 
-/* Style for individual content elements */
 .prefooter ul {
-  list-style: none; /* Remove default list styles */
-  padding: 0; /* Remove default padding */
-  margin: 0; /* Remove default margin */
-  display: flex; /* Display list items in a row */
-  overflow-x: hidden; /* Add horizontal scrolling for the list */
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  overflow-x: hidden;
   padding-top: 0vh;
   animation: scrollZ 10s linear infinite;
 }
 
 @keyframes scrollZ {
   0% {
-    transform: translateX(100%); /* Start offscreen to the right */
+    transform: translateX(100%);
   }
   100% {
-    transform: translateX(-100%); /* Move to the left */
+    transform: translateX(-100%);
   }
 }
 
-/* Style for individual list items */
 .prefooter ul li {
-  margin-right: 10px; /* Add some spacing between list items if needed */
-  flex-shrink: 0; /* Prevent list items from shrinking */
+  margin-right: 10px;
+  flex-shrink: 0;
   padding-top: 0;
 }
 
 .prefooter .content-container {
-  /* ... Other styles ... */
-  overflow: hidden; /* Hide overflowing content */
+  overflow: hidden;
   padding-top: 0;
   width: fit-content;
   text-align: center;
 }
 
 .prefooter ul {
-  /* ... Other styles ... */
-  white-space: nowrap; /* Prevent content from wrapping to a new line */
+  white-space: nowrap;
 }
 
 .prefooter {
@@ -157,10 +153,10 @@ footer p {
   height: 100%;
   width: 100;
   background-color: black;
-  display: flex; /* Display content in a row layout */
+  display: flex;
   justify-content: end;
   flex-direction: row;
-  white-space: nowrap; /* Prevent content from wrapping to a new line */
+  white-space: nowrap;
   overflow: hidden;
   text-align: center;
   align-items: center;
@@ -188,81 +184,72 @@ footer p {
   background: linear-gradient(to right, rgba(9, 70, 238, 0.7) 0%, rgba(9, 70, 238, 1) 50%, rgba(9, 70, 238, 0.7) 100%);
 }
 
-
-/* Style for individual content elements */
 .moreprefooter ul {
-  list-style: none; /* Remove default list styles */
-  padding: 0; /* Remove default padding */
-  margin: 0; /* Remove default margin */
-  display: flex; /* Display list items in a row */
-  overflow-x: hidden; /* Add horizontal scrolling for the list */
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  overflow-x: hidden;
   padding-top: 0vh;
   animation: scrollRight 8s linear infinite;
 }
 
 @keyframes scrollRight {
   0% {
-    transform: translateX(100%); /* Start offscreen to the right */
+    transform: translateX(100%);
   }
   100% {
-    transform: translateX(-100%); /* Move to the left */
+    transform: translateX(-100%);
   }
 }
 
-/* Style for individual list items */
 .moreprefooter ul li {
-  margin-right: 10px; /* Add some spacing between list items if needed */
-  flex-shrink: 0; /* Prevent list items from shrinking */
+  margin-right: 10px;
+  flex-shrink: 0;
   padding-top: 0;
 }
 
 .moreprefooter .content-container {
-  /* ... Other styles ... */
-  overflow: hidden; /* Hide overflowing content */
+  overflow: hidden;
   padding-top: 0;
   width: fit-content;
 }
 
 .moreprefooter ul {
-  /* ... Other styles ... */
-  white-space: nowrap; /* Prevent content from wrapping to a new line */
+  white-space: nowrap;
 }
 
-/* Style for individual content elements */
 .mostprefooter ul {
-  list-style: none; /* Remove default list styles */
-  padding: 0; /* Remove default padding */
-  margin: 0; /* Remove default margin */
-  display: flex; /* Display list items in a row */
-  overflow-x: hidden; /* Add horizontal scrolling for the list */
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  overflow-x: hidden;
   padding-top: 1vh;
   animation: scrollLeft 15s linear infinite;
 }
 
 @keyframes scrollLeft {
   0% {
-    transform: translateX(100%); /* Start offscreen to the right */
+    transform: translateX(100%);
   }
   100% {
-    transform: translateX(-100%); /* Move to the left */
+    transform: translateX(-100%);
   }
 }
 
-/* Style for individual list items */
 .mostprefooter ul li {
-  margin-right: 10px; /* Add some spacing between list items if needed */
-  flex-shrink: 0; /* Prevent list items from shrinking */
+  margin-right: 10px;
+  flex-shrink: 0;
 }
 
 .mostprefooter .content-container {
-  /* ... Other styles ... */
-  overflow: hidden; /* Hide overflowing content */
+  overflow: hidden;
   width: fit-content;
 }
 
 .mostprefooter ul {
-  /* ... Other styles ... */
-  white-space: nowrap; /* Prevent content from wrapping to a new line */
+  white-space: nowrap;
 }
 
 .button-holder {
@@ -441,8 +428,8 @@ footer p {
 }
 
 .balance-card::before {
-  content: ""; /* Empty content, required for pseudo-elements */
-  background-color: #000000; /* Set your desired text background color */
+  content: "";
+  background-color: #000000;
   border-color: #000000;
   position: absolute;
   height: 100%;
@@ -450,7 +437,7 @@ footer p {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: -1; /* Place the pseudo-element behind the card */
+  z-index: -1;
   border-radius: 5px;
 }
 
@@ -614,6 +601,7 @@ position: relative;
   margin-top: 2px;
   margin-bottom: 3%;
   position: relative;
+  overflow: hidden;
   margin-left: 2%;
   margin-right: 2%;
   background: linear-gradient(to right, rgba(206, 151, 18, 0.7) 0%, rgba(206, 151, 18, 1) 50%, rgba(206, 151, 18, 0.7) 100%);
@@ -627,9 +615,10 @@ h3 {
   position: relative;
   background: #000000;
   border: black;
-  height: 100%;
+  height: 10%;
   width: 100%;
-  padding-top: 100%;
+  overflow: hidden;
+  padding-top: 0%;
   border-top: 25px solid transparent;
   border-left: 55px solid transparent;
   border-top-left-radius: 25px;
