--- a/src/App.css
+++ b/src/App.css
@@ -383,6 +383,7 @@ footer p {
   display: grid;
   flex-wrap: nowrap;
   white-space: nowrap;
+  overflow: hidden;
   flex-direction: column;
   justify-content: space-around;
   align-items: space-around;
