--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,44 +1,55 @@
-h1 {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 1.5rem;
-    font-weight: bold;
+@font-face {
+    font-family: 'MyFont';
+    src: url('Sterilict-L3aen.ttf') format('truetype');
   }
-  
+
   .header-container {
     position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1% 3%;
-    border-bottom: 2px solid #ffbf46;
   }
   
   .auth-container {
     display: flex;
-    gap: 15px;
     align-items: center;
+    padding-left: 2%;
   }
   
   .user {
-    font-family: monospace;
+    background: linear-gradient(to right, rgba(212, 95, 16, 0.7) 0%, rgba(212, 95, 16, 1) 50%, rgba(212, 95, 16, 0.7) 100%);
+    border: 0px solid black;
+    border-radius: 15px;
+    padding: 5px;
+    font-size: .7rem;
+    font-family: 'MyFont';
     font-weight: bold;
-    color: ghostwhite;
-    width: auto;
+    width: 100px;
+    margin: 5px;
+    color: inherit;
+    text-decoration: inherit;
+    cursor: hand;
+    display: flex;
+    align-items: row;
+    justify-content: row;
   }
   
   .auth-button {
-    background-color: #ffbf46;
-    border: 2px solid #8a4fff;
-    border-radius: 5px;
+    background: linear-gradient(to right, rgba(212, 95, 16, 0.7) 0%, rgba(212, 95, 16, 1) 50%, rgba(212, 95, 16, 0.7) 100%);
+    border: 0px solid black;
+    border-radius: 15px;
     padding: 5px;
-    font-size: 1.2rem;
-    font-family: monospace;
+    font-size: .7rem;
+    font-family: 'MyFont';
     font-weight: bold;
+    width: 100px;
+    margin: 5px;
+    color: inherit;
+    text-decoration: inherit;
+    cursor: hand;
   }
   
   .auth-button:hover {
-    cursor: pointer;
+    cursor: default;
     opacity: 0.6;
   }
